changed index photo

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <p class="lead">Awesome placeholder photos of puppies in the sizes you want.</p>
             <pre><code>http://puppies.io/400x300/</code></pre>
 
-            <img src="/static/images/irsksetter.jpg" class="irsksetter">
+            <img src="/static/images/annie.jpg" class="annie">
 
             </div>
             <div class="col-xs-6">
