--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-xs-6 text-center">
             <h1>Placepuppy</h1>
-            <p class="lead">Awesome placeholder photos of puppies in the sizes you want.</p>
+            <p class="lead">Adorable placeholder photos of puppies in choosable sizes.</p>
             <pre><code>http://puppies.io/400x300/</code></pre>
 
             <img src="/static/images/annie.jpg" class="annie">
@@ -24,6 +24,6 @@
         </div>
         </div>
     </body>
-    
+
 
 </html>
