Changed link on index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             <div class="col-xs-6 text-center">
             <h1>Placepuppy</h1>
             <p class="lead">Adorable placeholder photos of puppies in choosable sizes.</p>
-            <pre><code>http://puppies.io/400x300/</code></pre>
+            <pre><code>http://puppies.lkng.me/400x300/</code></pre>
 
             <img src="/static/images/annie.jpg" class="annie">
 
