--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="/static/css/bootstrap.css" rel="stylesheet"/>
         <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+        <meta name="viewport" content="width=device-width">
         <title>placepuppy</title>
     </head>
     <body>
