Fixed layout for small screen

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
         <div class="row">
-            <div class="col-xs-6 text-center">
+            <div class="col-sm-6 text-center">
             <h1>Placepuppy</h1>
             <p class="lead">Adorable placeholder photos of puppies in choosable sizes.</p>
             <pre><code>http://puppies.lkng.me/400x300/</code></pre>
@@ -17,7 +17,7 @@
             <img src="/static/images/annie.jpg" class="annie">
 
             </div>
-            <div class="col-xs-6">
+            <div class="col-sm-6">
                 <img src="/static/images/vorsteh.jpg">
                 <br/>
                 <img src="/static/images/inko.jpg">
