--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,13 @@
         <div class="row">
             <div class="col-sm-6 text-center">
             <h1>Placepuppy</h1>
-            <p class="lead">Adorable placeholder photos of puppies in choosable sizes.</p>
+            <p class="lead">Adorable placeholder photos of puppies in various sizes. The photos come both in color and black & white. </p>
             <pre><code>http://puppies.lkng.me/400x300/</code></pre>
-
+           <pre> <code>http://puppies.lkng.me/bw/400x300/</code></pre>
             <img src="/static/images/annie.jpg" class="annie">
-
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 picture-column">
+
                 <img src="/static/images/vorsteh.jpg">
                 <br/>
                 <img src="/static/images/inko.jpg">
