--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-sm-6 picture-column">
 
-                <img src="/static/images/vorsteh.jpg">
+                <img src="/static/images/koda.jpg">
                 <br/>
                 <img src="/static/images/inko.jpg">
             </div>
